Refactoring corrections